_lib/applications/authentik/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-internal
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/instance: authentik-${ENVIRONMENT}
    environment: "${ENVIRONMENT}"
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: networking
  hostnames:
    - "${AUTHENTIK_SUBDOMAIN}.home-0ps.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
